--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -22,7 +22,7 @@
                 <div class="flex items-center space-x-6">
                     <a href="/" class="hover:text-red-500 transition-colors">Home</a>
                     <a href="/about" class="hover:text-red-500 transition-colors">About</a>
-                    <a href="#" class="hover:text-red-500 transition-colors">Contact</a>
+                    <a href="/contact" class="hover:text-red-500 transition-colors">Contact</a>
                 </div>
             </nav>
         </div>
