--- a/views/admin/editCategory.ejs
+++ b/views/admin/editCategory.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit Category</title>
+    <title>RevGear </title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/admin/addCategory.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
@@ -40,10 +40,7 @@
                     <i class="fas fa-tags"></i>
                     <span>Coupons</span>
                 </a>
-                <a href="/admin/salesreport" class="nav-item">
-                    <i class="fas fa-chart-line"></i>
-                    <span>Sales</span>
-                </a>
+                
                 <a href="/admin/offer" class="nav-item">
                     <i class="fas fa-gift"></i>
                     <span>Offer</span>
