--- a/views/admin/editProduct.ejs
+++ b/views/admin/editProduct.ejs
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>RevGear - Add Product</title>
+  <title>RevGear</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/admin/addProduct.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.css">
@@ -100,10 +100,7 @@
                     <i class="fas fa-tags"></i>
                     <span>Coupons</span>
                 </a>
-                <a href="/admin/salesreport" class="nav-item">
-                    <i class="fas fa-chart-line"></i>
-                    <span>Sales</span>
-                </a>
+               
                 <a href="/admin/offer" class="nav-item">
                   <i class="fas fa-gift"></i>
                   <span>Offer</span>
