--- a/views/admin/viewOrderList.ejs
+++ b/views/admin/viewOrderList.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RevGear - Customer Details</title>
+    <title>RevGear</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/admin/customer.css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
@@ -266,10 +266,7 @@
                     <i class="fas fa-tags"></i>
                     <span>Coupons</span>
                 </a>
-                <a href="/admin/salesreport" class="nav-item">
-                    <i class="fas fa-chart-line"></i>
-                    <span>Sales</span>
-                </a>
+                
                 <a href="/admin/offer" class="nav-item">
                     <i class="fas fa-gift"></i>
                     <span>Offer</span>
