--- a/public/admin/category.css
+++ b/public/admin/category.css
@@ -448,7 +448,7 @@ table th {
   cursor: pointer;
 }
 .add-category{
-  background-color: #007bff;
+  background-color: #2c353f;
   color: #fff;
   border: none;
   padding: 10px 20px;
