--- a/views/user/wallet.ejs
+++ b/views/user/wallet.ejs
@@ -92,7 +92,7 @@
                         <table class="table-auto w-full text-left border-collapse">
                             <thead>
                                 <tr class="bg-gray-200">
-                                    <th class="px-4 py-2">Date & Time</th>
+                                    <th class="px-4 py-2">Date </th>
                                     <th class="px-4 py-2">Type</th>
                                     <th class="px-4 py-2">Amount</th>
                                 </tr>
@@ -100,7 +100,7 @@
                             <tbody id="wallet-table-body">
                                 <% wallet.transactions.forEach(transaction => { %>
                                     <tr class="border-b">
-                                        <td class="px-4 py-2"><%= new Date(transaction.date).toLocaleString() %></td>
+                                        <td class="px-4 py-2"><%= new Date(transaction.date).toLocaleDateString() %></td>
                                         <td class="px-4 py-2"><%= transaction.type %></td>
                                         <td class="px-4 py-2">₹ <%= transaction.amount.toFixed(2) %></td>
                                     </tr>
