--- a/views/admin/orderLists.ejs
+++ b/views/admin/orderLists.ejs
@@ -306,7 +306,7 @@
                                     </td>
                                     <td><%= new Date(orderItem.orderDate).toLocaleDateString() %></td>
                                     <td><%= orderItem.userId.name %></td>
-                                    <td>₹<%= orderItem.totalAmount %></td>
+                                    <td>₹<%= orderItem.totalAmount.toFixed(2) %></td>
                                     <td>
                                         <button class="btn btn-primary btn-sm view-btn" data-id="<%= orderItem._id %>">
                                             View Details
